# qtstarter

./: .gitignore  CMakeLists.txt  README.md
quick_app/: CMakeLists.txt  build.sh
quick_app/res/: AppIcon.icns  resources.qrc
quick_app/src/: main.cpp
res/: resources.qrc
res/views/: main.qml
src/: main.cpp
widgets_app/: CMakeLists.txt  build.sh
widgets_app/res/: resources.qrc
widgets_app/src/: main.cpp  mainwindow.cpp  mainwindow.h
